@@ -1,3 +1,8 @@
+2017-02-09  Arndt Kaiser
+
+	* RTFCharget() improved and wrong calculation inside of sizeof() fixed
+	  (bug #215, thanks to dcb)
+
 2013-07-25  Mark Ellis  <mark@mpellis.org.uk>
 
 	* 1.3 release
